# prompt-manager

./: README.md
backend/: app.py  pyproject.toml
backend/app_templates/: index.html  prompt.html
frontend/my-app/: package-lock.json  package.json
frontend/my-app/app/: layout.tsx  page.tsx
frontend/my-app/app/[...slug]/: page.tsx
