[project]
name = "python-pkg"
description = "Simple prompt template management and use"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",]
dependencies = [
    "fastapi[standard]",
    "psycopg[binary,pool]",
    "Jinja2",
]
